# fastapi-blog

./: .env.example  .gitignore  main.py  pyproject.toml
app/: create_tables.py  database.py  main.py  models.py  promote.py  role.py  schemas.py  seed.py
app/api/: category.py  comment.py  dependency.py  post.py  upload.py  user.py
app/database/: cache.py  connection.py  fake_comments.py  fake_db.py  fake_posts.py  orm.py  repository.py
app/schema/: request.py  response.py
app/service/: auth.py  comment.py  email.py  markdown.py  otp.py  upload.py
app/tests/: conftest.py  test_category.py  test_comment.py  test_main.py  test_otp.py  test_password_reset.py  test_post.py  test_role.py  test_upload.py  test_user.py
static/: admin.html  edit.html  index.html  login.html  post.html  reset.html  signup.html  write.html
static/css/: style.css
static/js/: admin.js  api.js  auth.js  edit.js  index.js  login.js  post-form.js  post.js  reset.js  signup.js  write.js
